--- a/frontend/src/styles/delete.module.css
+++ b/frontend/src/styles/delete.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bungee+Tint&family=Karla:ital,wght@0,200..800;1,200..800&family=Lilita+One&family=New+Amsterdam&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Protest+Guerrilla&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-.delete-drive-container{
+.deletedrivecontainer{
     width: 100%;
     max-width: 600px;
     padding: 20px;
@@ -14,7 +14,7 @@
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   
 }
-.delete-drive-container:hover{
+.deletedrivecontainer:hover{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 
 }
@@ -35,11 +35,11 @@
   margin:0;
 
   }
-  .delete-form{
+  .deleteform{
     padding: 10px;
     width: 300px;
   }
-  .form-delete-group{
+  .formdeletegroup{
     display: flex;
     flex-direction: column;
     gap: 20px;
