--- a/frontend/src/styles/drive.module.css
+++ b/frontend/src/styles/drive.module.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bungee+Tint&family=Genos:wght@100&family=Karla:ital,wght@0,200..800;1,200..800&family=Lilita+One&family=New+Amsterdam&family=Orbitron:wght@700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Passion+One&family=Pridi:wght@200;300;400;500;600;700&family=Protest+Guerrilla&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-.drive-container {
+.drivecontainer {
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
   position: relative;
@@ -7,14 +7,14 @@
     border-radius: 10px;
   }
   
-  h2 {
+  .driveheading {
     font-size: 24px;
     font-family: "Anton", serif;
   font-weight: 400;
   font-style: normal;
   }
   
-  .drive-list {
+  .drivelist {
     list-style: none;
     padding: 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -30,13 +30,13 @@
   ul::-webkit-scrollbar {
     display: none; /* For Chrome, Safari, and Edge */
   }
-  .drive-item:hover{
+  .driveitem:hover{
     transform: scale(0.98, 0.98);
     z-index: 2;
     
   }
   
-  .drive-item {
+  .driveitem {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
@@ -50,14 +50,14 @@
 
   }
   
-  .drive-logo {
+  .drivelogo {
     width: 40px;
     height: inherit;
     margin-right: 15px;
 
     
   }
-  .drive-display-details{
+  .drivedisplaydetails{
     display: flex;
     gap: 20px;
 
@@ -65,15 +65,15 @@
 
   }
   
-  .drive-display-details h3 {
+  .drivedisplaydetails h3 {
     margin: 0;
   }
   
-  .drive-display-details p {
+  .drivedisplaydetails p {
     margin: 0;
     color: #666;
   }
-  .drive-list-button{
+  .drivelistbutton{
     position: absolute;
     right:1rem;
     top:30%;
@@ -102,10 +102,10 @@
   touch-action: manipulation;
 }
 
-.drive-list-button:hover {
+.drivelistbutton:hover {
   box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
 }
-.drive-dialog{
+.drivedialog{
   position: absolute;
   top:25%;
   max-width: 600px;
@@ -119,7 +119,7 @@
 border: none;
   z-index: 1000;
 }
-.modal-image{
+.modalimage{
   display: inline-block;
   width: 40px;
   height: inherit;
@@ -136,11 +136,11 @@ border: none;
   font-style: normal;
 
 }
-.drive-dialog H3{
+.drivedialog H3{
   display: inline-block;
 
 }
-.dialog-close {
+.dialogclose {
   border:none;
   background-color: transparent;
   position: absolute;
@@ -150,10 +150,10 @@ border: none;
   height: 32px;
   opacity: 0.3;
 }
-.dialog-close:hover {
+.dialogclose:hover {
   opacity: 1;
 }
-.dialog-close:before, .dialog-close:after {
+.dialogclose:before, .dialogclose:after {
   position: absolute;
   top:1px;
   left: 15px;
@@ -162,10 +162,10 @@ border: none;
   width: 2px;
   background-color: #333;
 }
-.dialog-close:before {
+.dialogclose:before {
   transform: rotate(45deg);
 }
-.dialog-close:after {
+.dialogclose:after {
   transform: rotate(-45deg);
 }
 
@@ -175,12 +175,12 @@ p{
   font-weight: 600;
   font-style: normal;
 }
-.drive-time{
+.drivetime{
   font-family: "Pridi", serif;
   font-weight: 400;
   font-style: normal;
 }
-.drive-name{
+.drivename{
   font-family: "Pridi", serif;
   font-weight: 400;
   font-style: normal;
