--- a/frontend/src/styles/edit.module.css
+++ b/frontend/src/styles/edit.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bungee+Tint&family=Karla:ital,wght@0,200..800;1,200..800&family=Lilita+One&family=New+Amsterdam&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Protest+Guerrilla&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-.drive-fetch-container{
+.drivefetchcontainer{
     width: 95%;
   
     padding: 20px;
@@ -14,7 +14,7 @@
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
    
 }
-.drive-fetch-container:hover{
+.drivefetchcontainer:hover{
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
 
@@ -34,7 +34,7 @@
 
   }
 
-  .drive-details{
+  .drivedetails{
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     padding: 50px;
@@ -43,11 +43,11 @@
     
     
   }
-  .drive-detail-update{
+  .drivedetailupdate{
     width: 50%;
   }
  
-  .drive-details p{
+  .drivedetails p{
     font-family: "Orbitron", sans-serif;
     font-optical-sizing: auto;
     font-weight: 200;
@@ -55,7 +55,7 @@
     
   }
 
-  .form-input{
+  .forminput{
     font-family: "SF Pro";
   max-width: 190px;
   padding: 0.875rem;
@@ -67,11 +67,11 @@
   transition: ease 0.25s;
 
   }
-  .form-input:focus{
+  .forminput:focus{
     box-shadow: 5.5px 7px 0 black;
   }
 
-.form-group{
+.formgroup{
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -81,7 +81,7 @@
     width: 500px;
    
 }
-.edit-form{
+.editform{
   display: flex;
   flex-direction: column;
   gap:30px;
@@ -92,12 +92,12 @@
     
     
 }
-.drive-detail-update strong{
+.drivedetailupdate strong{
   font-family:futura;
   
 
 }
-.drive-detail-update p{
+.drivedetailupdate p{
   font-family: "Genos", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
