--- a/frontend/src/styles/delete.module.css
+++ b/frontend/src/styles/delete.module.css
@@ -19,7 +19,7 @@
 
 }
 
-.title,h3{
+.title{
     font-size: 24px;
     font-family: "Roboto Condensed", sans-serif;
     font-optical-sizing: auto;
