--- a/frontend/src/styles/login.module.css
+++ b/frontend/src/styles/login.module.css
@@ -1,18 +1,23 @@
 
-.logincomponent{
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Bungee+Tint&family=Genos:wght@100&family=Karla:ital,wght@0,200..800;1,200..800&family=Lilita+One&family=New+Amsterdam&family=Orbitron:wght@700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Passion+One&family=Pridi:wght@200;300;400;500;600;700&family=Protest+Guerrilla&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=GeistSans:wght@400;600&display=swap');
+
+
+.login-component{
     margin: 0;
-    margin-left: 1rem;
+    
     display: flex;
    flex-direction: column;
  
-   width: 430px;
+   width: 470px;
    height: 100%;
+   overflow: hidden;
 
 }
-.verifystudentcontainer{
+.verify-student-container{
 
-    margin-top: 3rem;
-   width: 400px;
+    margin-top: 2rem;
+   width: 470px;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -22,14 +27,30 @@
    
 }
 
-.loginlogo{
+.login-logo{
    
     margin: 0;
     height: 9rem;
 }
-.formgroup{
-    margin-left: 1rem;
+.form-group{
+    
     width: 380px;
     margin: 0;
+    margin-left: 2rem;
   
+}
+.login-description{
+    font-family: "Roboto Condensed", serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+
+}
+.login-heading{
+    font-family: 'GeistSans', sans-serif;
+
+}
+.login-bttn{
+    margin-left: 2rem;
+
 }
